--- a/Notes/Strings/en-US/Resources.resw
+++ b/Notes/Strings/en-US/Resources.resw
@@ -265,6 +265,6 @@
     <value>We're glad you're here. Just need to go through a few simple steps and you'll be all up and running!</value>
   </data>
   <data name="Window.Text" xml:space="preserve">
-    <value>Simple mode</value>
+    <value>Simplified mode</value>
   </data>
 </root>
