--- a/Notes/Strings/en-US/Welcome.resw
+++ b/Notes/Strings/en-US/Welcome.resw
@@ -130,7 +130,7 @@
     <value>Submit_feedback</value>
   </data>
   <data name="Sub.Text" xml:space="preserve">
-    <value>This is a custom version of Pre-Alpha 1, meaning there will be bugs.  </value>
+    <value>Version: 0.0.1.1.canary.revision1</value>
   </data>
   <data name="Welc.Text" xml:space="preserve">
     <value>Welcome to Rise Notes: Kai's Edition!</value>
