--- a/Notes/Strings/en-US/Setup.resw
+++ b/Notes/Strings/en-US/Setup.resw
@@ -130,10 +130,10 @@
     <value>You’ll need to give us permission to associate your files with Rise Notes in order for this to be possible. Click ‘Accept’ to continue.  This app will then close, reopen afterwards to start using.</value>
   </data>
   <data name="Disclaimer.Text" xml:space="preserve">
-    <value>Disclaimer:</value>
+    <value>Disclaimer Notice:</value>
   </data>
   <data name="text1.Text" xml:space="preserve">
-    <value>Terms and Conditions</value>
+    <value>Rise Software's Terms and Conditions</value>
   </data>
   <data name="text2.Text" xml:space="preserve">
     <value>Rise Notes - Terms and Conditions</value>
@@ -142,7 +142,7 @@
     <value>Last Updated: August 2021</value>
   </data>
   <data name="textBut1.PrimaryButtonText" xml:space="preserve">
-    <value>Accept</value>
+    <value>Accept and Continue to Settings</value>
   </data>
   <data name="textBut2.SecondaryButtonText" xml:space="preserve">
     <value>Decline</value>
