--- a/Notes/Strings/en-US/Welcome.resw
+++ b/Notes/Strings/en-US/Welcome.resw
@@ -133,6 +133,6 @@
     <value>Version: 0.0.1.1.canary.revision1</value>
   </data>
   <data name="Welc.Text" xml:space="preserve">
-    <value>Welcome to Rise Notes: Kai's Edition!</value>
+    <value>Welcome to Rise Notes: Kai's Edition (Canary)!</value>
   </data>
 </root>
