--- a/Notes/Strings/en-US/Welcome.resw
+++ b/Notes/Strings/en-US/Welcome.resw
@@ -130,9 +130,9 @@
     <value>Submit_feedback_Text_Removed</value>
   </data>
   <data name="Sub.Text" xml:space="preserve">
-    <value>Version: 0.0.1.1.canary.revision2</value>
+    <value>0.0.1.1.canary.revision2  |  Github Release </value>
   </data>
   <data name="Welc.Text" xml:space="preserve">
-    <value>Rise Notes: Kai's Edition (Canary)</value>
+    <value>Version Page: Rise Notes: Kai's Edition (Canary)</value>
   </data>
 </root>
