--- a/Notes/Strings/en-US/Setup.resw
+++ b/Notes/Strings/en-US/Setup.resw
@@ -124,13 +124,13 @@
     <value>Open your documents anywhere</value>
   </data>
   <data name="desc3.Text" xml:space="preserve">
-    <value>Just two clicks away!</value>
+    <value>Just some short clicks away!</value>
   </data>
   <data name="Description.Text" xml:space="preserve">
     <value>You will need to give this app permission to associate your files with Rise Notes in order for this to be possible. Click ‘Accept’ to continue.   After giving the said permission, the app will close.  Reopen and start typing away! </value>
   </data>
   <data name="Disclaimer.Text" xml:space="preserve">
-    <value>Disclaimer Notice:</value>
+    <value>Disclaimer:</value>
   </data>
   <data name="text1.Text" xml:space="preserve">
     <value>Rise Software's Terms and Conditions</value>
