More text updates

--- a/Notes/Strings/en-US/Welcome.resw
+++ b/Notes/Strings/en-US/Welcome.resw
@@ -133,6 +133,6 @@
     <value>0.0.2.0.canary.revision0  |  Active Development Version</value>
   </data>
   <data name="Welc.Text" xml:space="preserve">
-    <value>Version Page: Rise Notes: Kai's Edition (Canary)</value>
+    <value>Version Page for Rise Notes: Kai's Edition (Canary) </value>
   </data>
 </root>
