--- a/Notes/Strings/en-US/Setup.resw
+++ b/Notes/Strings/en-US/Setup.resw
@@ -136,7 +136,7 @@
     <value>Rise Software's Terms and Conditions</value>
   </data>
   <data name="text2.Text" xml:space="preserve">
-    <value>Rise Notes Original - Terms and Conditions</value>
+    <value>The Original Terms and Conditions of Rise Notes</value>
   </data>
   <data name="text3.Text" xml:space="preserve">
     <value>Last Updated: August 2021</value>
